--- a/docs/documenting/diagram-examples.asciidoc
+++ b/docs/documenting/diagram-examples.asciidoc
@@ -6,7 +6,9 @@ layout: docs
 
 :toc:
 
-== How to created embedded diagrams for this website
+
+
+== How to create embedded diagrams for this website
 
 Besides inserting your locally created images, the
 link:https://github.com/mhaberler/docker-jekyll-asciidoctor/tree/master/jekyll-asciidoctor-base[formatting engine]
@@ -14,6 +16,8 @@ used for the machinekit website supports a variety of embedded diagram types:
 Diagrams can be created by embedded markup and will be rendered to images in the website automatically.
 
 See the link:https://github.com/asciidoctor/asciidoctor-diagram[Asciidoctor Diagram manual] for details.
+
+
 
 === ditaa - DIagrams Through Ascii Art
 
@@ -87,7 +91,6 @@ options:
 - "b": {fill:[[0.5, 0.0, 0.5, 0.5], 4]}
 - "lower": {fill:[[0.0, 0.5, 0.0, 0.5], 4]}
 - "_arrow_": {fill:[[0.5, 0.0, 0.0, 1], flat]}
-
 ----
 
 
