Overhaul the indexes
HAL, Developer, User and Getting Started

Index document references subsiduary documents as links not includes
Index document does however include TOC for subsiduary documents,
but as links.

Each subsiduary document also has TOC to continue contents visibility
at lower levels no matter how the document was arrived at

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/common/Linux_FAQ.asciidoc
+++ b/docs/common/Linux_FAQ.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = Linux FAQ 
-
+:toc:
 [[cha:linux-faq]] (((Linux FAQ)))
 
 These are some basic Linux commands and techniques for new to Linux
