--- a/docs/config/copy_and_run.asciidoc
+++ b/docs/config/copy_and_run.asciidoc
@@ -40,7 +40,7 @@ without showing the Configuration Selector screen.
 
 When you select a configuration from the Sample Configurations section, 
 it will automaticly place a copy of that config in the
-emc/configs directory. 
+~/machinekit/configs directory. 
 
 == Next steps in configuration
 
