--- a/docs/gcode/overview.asciidoc
+++ b/docs/gcode/overview.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/gcode/images
 
 = G Code Overview
-
+:toc:
 [[cha:g-code-overview]] (((G Code Overview)))
 
 :ini: {basebackend@docbook:'':ini}
