--- a/docs/getting-started/getting-started-platform.asciidoc
+++ b/docs/getting-started/getting-started-platform.asciidoc
@@ -11,26 +11,20 @@ can be some differences in the installation for a specific platform.
 
 [NOTE]
 ====
-You should have a working Debian installation.
+You should first have a working Debian installation.
 ====
 
 == Installation options:
 
 === Images
 
-:leveloffset: +1
+link:../machinekit-images[Machinekit Images]
 
-include::{docdir}/docs/getting-started/machinekit-images.asciidoc[]
-
-:leveloffset: -1
 
 === Installing packages
 
-:leveloffset: +1
+link:../installing-packages[Installing Packages]
 
-include::{docdir}/docs/getting-started/installing-packages.asciidoc[]
-
-:leveloffset: -1
 
 === Development packages
 
@@ -38,5 +32,5 @@ In addition to the configuring of the APT repository, installation of the
 kernel, there are some additional steps to take to install a development
 setup.
 
-. link:/docs/developing/developing[Set up a development platform]
+link:../../developing/developing[Set up a development platform]
   when you want to develop for Machinekit.
