--- a/docs/gui/tooledit.asciidoc
+++ b/docs/gui/tooledit.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/gui/images
 
 = Tool Edit GUI
-
+:toc:
 [[cha:tooledit-gui]] (((Tool Edit GUI)))
 
 == Tool Edit Version Requirements
