--- a/docs/hal/tutorial.asciidoc
+++ b/docs/hal/tutorial.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/hal/images
 
 = Advanced HAL Tutorial
-
+:toc:
 [[cha:HAL-tutorial]] (((HAL Tutorial)))
 
 == Introduction[[sec:Tutorial-Intro]]
