--- a/docs/drivers/motenc.asciidoc
+++ b/docs/drivers/motenc.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = Motenc Driver
-
+:toc:
 [[cha:montec-driver]] (((Motenc Driver)))
 
 Vital Systems Motenc-100 and Motenc-LITE
