--- a/docs/gcode/coordinates.asciidoc
+++ b/docs/gcode/coordinates.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/gcode/images
 
 = Coordinate System
-
+:toc:
 [[cha:coordinate-system]] (((Coordinate System)))
 
 == Introduction
