--- a/docs/getting-started/installing-packages.asciidoc
+++ b/docs/getting-started/installing-packages.asciidoc
@@ -5,9 +5,10 @@
 
 = Platforms
 
+
 Follow these steps to configure Apt and install a kernel and Machinekit packages:
 
-[WARNING]
+[NOTE]
 ====
 The kernel-naming convention used in these packages may change as
 experience is accumulated, especially with ARM-based systems. Be sure to
@@ -20,11 +21,11 @@ check back here before installing a new kernel.
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-wheezy.asciidoc[]
+- link:../APT-packages-wheezy[APT Packages for Wheezy]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-arm7.asciidoc[]
+- link:../install-rt-kernel-arm7[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -32,11 +33,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-wheezy.asciidoc[]
+- link:../APT-packages-wheezy[APT Packages for Wheezy]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-i386.asciidoc[]
+- link:../install-rt-kernel-i386[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -44,11 +45,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-wheezy.asciidoc[]
+- link:../APT-packages-wheezy[APT Packages for Wheezy]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-amd64.asciidoc[]
+- link:../install-rt-kernel-amd64[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -57,11 +58,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-jessie.asciidoc[]
+- link:../APT-packages-jessie[APT Packages for Jessie]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-arm7.asciidoc[]
+- link:../install-rt-kernel-arm7[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -69,11 +70,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-jessie.asciidoc[]
+- link:../APT-packages-jessie[APT Packages for Jessie]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-RPi2.asciidoc[]
+- link:../install-rt-kernel-RPi2[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -81,11 +82,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-jessie.asciidoc[]
+- link:../APT-packages-jessie[APT Packages for Jessie]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-i386.asciidoc[]
+- link:../install-rt-kernel-i386[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
@@ -93,11 +94,11 @@ include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
 
 :leveloffset: +2
 
-include::{docdir}/docs/getting-started/APT-packages-jessie.asciidoc[]
+- link:../APT-packages-jessie[APT Packages for Jessie]
 
-include::{docdir}/docs/getting-started/install-rt-kernel-amd64.asciidoc[]
+- link:../install-rt-kernel-amd64[Install the kernel]
 
-include::{docdir}/docs/getting-started/install-runtime-packages.asciidoc[]
+- link:../install-runtime-packages[Install Runtime Packages]
 
 :leveloffset: -2
 
