--- a/docs/gui/halui.asciidoc
+++ b/docs/gui/halui.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = HAL User Interface
-
+:toc:
 [[cha:hal-user-interface]] (((HAL User Interface)))
 
 == Introduction[[sec:HaluiIntroduction]]
