--- a/docs/gui/touchy.asciidoc
+++ b/docs/gui/touchy.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/gui/images
 
 = Touchy GUI
-
+:toc:
 [[cha:touchy-gui]] (((Touchy GUI)))
 
 Touchy is a user interface for Machinekit meant for use on machine control panels,
