--- a/docs/hal/haltcl.asciidoc
+++ b/docs/hal/haltcl.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = HAL TCL Files
-
+:toc:
 [[cha:hal-tcl]] (((HAL TCL Files)))
 
 The halcmd language excels in specifiying components and connections but
